31 January 2007: Wouter
	- Added makedist.sh script to make release tarball.

30 January 2007: Wouter
	- links in example/ldns-testpkts.c and .h for premade packet support.
	- added callback argument to listen_dnsport and daemon/worker.

29 January 2007: Wouter
	- unbound.8 a short manpage.

26 January 2007: Wouter
	- fixed memleak.
	- make lint works on BSD and Linux (openssl defines).
	- make tags works.
	- testbound program start.

25 January 2007: Wouter
	- fixed lint so it may work on BSD.
	- put license into header of every file.
	- created verbosity flag.
	- fixed libevent configure flag.
	- detects event_base_free() in new libevent 1.2 version.
	- getopt in daemon. fatal_exit() and verbose() logging funcs.
	- created log_assert, that throws assertions to the logfile.
	- listen_dnsport service. Binds ports.

24  January 2007: Wouter
	- cleaned up configure.ac.

23  January 2007: Wouter
	- added libevent to configure to link with.
	- util/netevent setup work.
	- configure searches for libevent.
	- search for libs at end of configure (when other headers and types
	  have been found).
	- doxygen works with ATTR_UNUSED().
	- util/netevent implementation.

22  January 2007: Wouter
	- Designed header file for network communication.

16  January 2007: Wouter
	- added readme.svn and readme.tests.

4 January 2007: Wouter
	- Testbed script (run on multiple platforms the test set).
	  Works on Sunos9, Sunos10, FreeBSD 6.1, Fedora core 5.
	- added unit test tpkg.

3 January 2007: Wouter
	- committed first set of files into subversion repository.
	  svn co svn+ssh://unbound.net/svn/unbound
	  You need a ssh login.  There is no https access yet.
	- Added LICENSE, the BSD license.
	- Added doc/README with compile help.
	- main program stub and quiet makefile.
	- minimal logging service (to stderr).
	- added postcommit hook that serves emails.
	- added first test 00-lint. postcommit also checks if build succeeds.