@@ -45,17 +45,87 @@
 #include "util/netevent.h"
 #include "services/listen_dnsport.h"
 
-/** handles callbacks from listening event interface */
-static int worker_handle_request(ldns_buffer* packet, void* arg)
+/** process incoming request */
+static void worker_process_query(struct worker* worker) 
 {
+	/* query the forwarding address */
+	
+}
+
+/** check request sanity. Returns error code, 0 OK, or -1 discard. */
+static int worker_check_request(ldns_buffer* pkt)
+{
+	if(ldns_buffer_limit(pkt) < LDNS_HEADER_SIZE) {
+		verbose(VERB_DETAIL, "request too short, discarded");
+		return -1;
+	}
+	if(LDNS_QR_WIRE(ldns_buffer_begin(pkt))) {
+		verbose(VERB_DETAIL, "request has QR bit on, discarded");
+		return -1;
+	}
+	if(LDNS_OPCODE_WIRE(ldns_buffer_begin(pkt)) != LDNS_PACKET_QUERY) {
+		verbose(VERB_DETAIL, "request unknown opcode %d", 
+			LDNS_OPCODE_WIRE(ldns_buffer_begin(pkt)));
+		return LDNS_RCODE_NOTIMPL;
+	}
+	if(LDNS_QDCOUNT(ldns_buffer_begin(pkt)) != 1) {
+		verbose(VERB_DETAIL, "request wrong nr qd=%d", 
+			LDNS_QDCOUNT(ldns_buffer_begin(pkt)));
+		return LDNS_RCODE_FORMERR;
+	}
+	if(LDNS_ANCOUNT(ldns_buffer_begin(pkt)) != 0) {
+		verbose(VERB_DETAIL, "request wrong nr an=%d", 
+			LDNS_ANCOUNT(ldns_buffer_begin(pkt)));
+		return LDNS_RCODE_FORMERR;
+	}
+	if(LDNS_NSCOUNT(ldns_buffer_begin(pkt)) != 0) {
+		verbose(VERB_DETAIL, "request wrong nr ns=%d", 
+			LDNS_NSCOUNT(ldns_buffer_begin(pkt)));
+		return LDNS_RCODE_FORMERR;
+	}
+	if(LDNS_ARCOUNT(ldns_buffer_begin(pkt)) != 0) {
+		verbose(VERB_DETAIL, "request wrong nr ar=%d", 
+			LDNS_ARCOUNT(ldns_buffer_begin(pkt)));
+		return LDNS_RCODE_FORMERR;
+	}
+	return 0;
+}
+
+/** handles callbacks from listening event interface */
+static int worker_handle_request(struct comm_point* c, void* arg, int error,
+	struct comm_reply* repinfo)
+{
+	struct worker* worker = (struct worker*)arg;
+	int ret;
 	log_info("worker handle request");
+	if(error != 0) {
+		log_err("called with err=%d", error);
+		return 0;
+	}
+	if((ret=worker_check_request(c->buffer)) != 0) {
+		if(ret != -1) {
+			LDNS_RCODE_SET(ldns_buffer_begin(c->buffer), ret);
+			return 1;
+		}
+		return 0;
+	}
+	if(worker->num_requests > 0) {
+		verbose(VERB_DETAIL, "worker: too many requests active. "
+			"dropping incoming query.");
+		return 0;
+	}
+	/* answer it */
+	worker->num_requests ++;
+	memcpy(&worker->query_reply, repinfo, sizeof(struct comm_reply));
+	worker_process_query(worker);
 	return 0;
 }
 
 struct worker* worker_init(const char* port, int do_ip4, int do_ip6,
 	int do_udp, int do_tcp, size_t buffer_size)
 {
-	struct worker* worker = (struct worker*)malloc(sizeof(struct worker));
+	struct worker* worker = (struct worker*)calloc(1, 
+		sizeof(struct worker));
 	if(!worker) 
 		return NULL;
 	worker->base = comm_base_create();
